# DataPipelineFoundry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  DEVELOPER_GUIDE.md  INSTALL.md  README.md  RELEASING.md  docker-compose.yml  implementation_roadmap.md  mvp_roadmap.md  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  (+1 more)
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: compile.rs  kafka.rs  mod.rs  run.rs  web.rs
crates/cli/src/commands/init/: foundry-project.yml.j2  mod.rs
crates/cli/src/commands/init/templates/: api-sources.yml.j2  connections.yml.j2  db-sources.yml.j2  foundry-project.yml.j2  kafka-sources.yml.j2  sources.yml.j2  warehouse-sources.yml.j2
crates/components/: Cargo.toml
crates/components/connector_versioning/: Cargo.toml
crates/components/connector_versioning/src/: lib.rs
crates/components/connector_versioning_derive/src/: lib.rs
crates/components/src/: lib.rs
crates/components/src/kafka/: build.rs  build_readme.md  connector.rs  errors.rs  helpers.rs  mod.rs  predicates.rs  smt.rs  traits.rs  utils.rs  version_consts.rs
crates/components/src/kafka/connectors/: base.rs  mod.rs
crates/components/src/kafka/connectors/sink/: debezium_postgres.rs  mod.rs
crates/components/src/kafka/connectors/source/: debezium_postgres.rs
crates/components/src/kafka/smt/: errors.rs  mod.rs  utils.rs
crates/components/src/kafka/smt/transforms/: custom.rs  mod.rs
crates/components/src/kafka/smt/transforms/debezium/: by_logical_table_router.rs  content_based_router.rs  decode_logical_message_content.rs  extract_new_record_state.rs  filter.rs  header_to_value.rs  mod.rs  outbox_event_router.rs  partition_routing.rs  timezone_converter.rs
crates/components/tests/: compile_connector.rs
crates/dag/: Cargo.toml
crates/dag/src/: error.rs  lib.rs  types.rs
crates/database_adapters/: Cargo.toml
crates/database_adapters/src/: lib.rs  postgres.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  types.rs
crates/engine/src/executor/: mod.rs
crates/engine/src/executor/kafka/: errors.rs  mod.rs  types.rs  utils.rs
crates/engine/src/executor/sql/: mod.rs
crates/engine/src/planner/: mod.rs
crates/engine/src/registry/: declarations.rs  error.rs  mem.rs  mod.rs  model.rs  models.rs  tests.rs
crates/engine/tests/: common.rs  common_test_utils.rs  integration.rs  sql_executor.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs  types.rs
crates/executor/src/database/: mod.rs  postgres.rs
crates/executor/src/sql/: mod.rs
crates/executor/tests/: common_test_utils.rs  integration.rs
crates/ff_core/: Cargo.toml  dag.dot
crates/ff_core/src/: dag.rs  lib.rs  test_utils.rs
crates/ff_core/src/compiler/: mod.rs
crates/ff_core/src/config/: error.rs  loader.rs  mod.rs  traits.rs
crates/ff_core/src/config/components/: connections.rs  foundry_project.rs  global.rs  mod.rs  model.rs  source.rs
crates/ff_core/src/config/components/sources/: kafka.rs  mod.rs  warehouse_source.rs
crates/ff_core/src/dag/: mod.rs
crates/ff_core/src/directory/: mod.rs
crates/ff_core/src/executor/: mod.rs
crates/ff_core/src/executor/database/: mod.rs  postgres.rs
crates/ff_core/src/executor/sql/: mod.rs  postgres.rs
crates/ff_core/src/functions/: compile.rs  kafka.rs  mod.rs  run.rs
crates/ff_core/src/macros/: mod.rs  ref_macro.rs
crates/ff_core/src/parser/: mod.rs
crates/ff_core/src/sources/: README.md
crates/registry/: Cargo.toml
crates/registry/src/: error.rs  lib.rs  mem.rs  model.rs  tests.rs
crates/shared_clients/: Cargo.toml
crates/shared_clients/src/: kafka.rs  lib.rs  postgres.rs
docs/: cli.md  (+20 more)
dpf_core/catalog/: Cargo.toml
dpf_core/catalog/src/: error.rs  lib.rs  models.rs
dpf_core/cli/: Cargo.toml
dpf_core/cli/src/: main.rs
dpf_core/cli/src/commands/: mod.rs  web.rs
dpf_core/cli/src/commands/init/: mod.rs
dpf_core/cli/src/commands/init/templates/: foundry-project.yml.j2  source-db-sources.yml.j2  warehouse-sources.yml.j2
dpf_core/common/: Cargo.toml
dpf_core/common/src/: lib.rs
dpf_core/common/src/config/: loader.rs
dpf_core/common/src/config/components/: connections.rs  foundry_project.rs  global.rs  mod.rs  model.rs  python.rs
dpf_core/common/src/config/components/sources/: api.rs  kafka.rs  mod.rs  warehouse_source.rs
dpf_core/common/src/error/: diagnostics.rs
dpf_core/common/src/traits/: mod.rs
dpf_core/common/src/types/: nodes.rs  schema.rs  sources.rs
dpf_core/common/src/types/kafka/: connector.rs
dpf_core/components/connector_versioning_derive/: Cargo.toml
dpf_core/executor/: Cargo.toml  build.rs
dpf_core/executor/src/: lib.rs  python.rs
dpf_core/ff_core/: Cargo.toml  datafusion_pretransform_summary.md
dpf_core/ff_core/src/functions/: compile.rs  kafka.rs  run.rs
dpf_core/ff_core/src/parser/: mod.rs
dpf_core/python_parser/: Cargo.toml
dpf_core/python_parser/src/: lib.rs
dpf_python/: Cargo.toml  Taskfile.yml  pyproject.toml
dpf_python/python/dpf_python/: __init__.py  __init__.pyi  api.pyi  connections.pyi  db.pyi  kafka.pyi  py.typed
dpf_python/src/: api.rs  connections.rs  db.rs  foundry.rs  kafka.rs  lib.rs  types.rs
dpf_python/src/sources/: api.rs  db.rs  kafka.rs  mod.rs
dpf_web/: Cargo.toml  README.md  docker-compose.yml
dpf_web/src/: lib.rs
dpf_web/ui/: package-lock.json  tsconfig.json
dpf_web/ui/src/: App.tsx  index.css
dpf_web/ui/src/components/: dag-graph.css  dag-graph.tsx  placeholders.tsx  sidebar.tsx
dpf_web/ui/src/components/ui/: button.tsx
dpf_web/ui/src/types/: manifest.ts
example/dvdrental_example/foundry_python/: pyproject.toml
example/dvdrental_example/foundry_python/jobs/bronze_film_enricher/: pyproject.toml
example/dvdrental_example/foundry_python/jobs/bronze_film_enricher/src/bronze_film_enricher/: __main__.py
example/dvdrental_example/foundry_python/jobs/bronze_rental_enricher/: pyproject.toml
example/dvdrental_example/foundry_python/jobs/bronze_rental_enricher/src/bronze_rental_enricher/: __init__.py  __main__.py  etl.py
(+228 files in other folders)
