[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/ff_core",
    "crates/common",
    "crates/sqlparser",
    "crates/logging",
    "crates/test_utils",
    "crates/executor",
    "crates/catalog",
    "crates/dag",
    "crates/shared_clients",
    "foundry_web/foundry_backend"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common deps shared across crates
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
tracing = "0.1.41"
minijinja = "2.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
once_cell = "1"
tempfile = "3"
thiserror = "2"

common = { path = "crates/common"}
ff_core = { path = "crates/ff_core" }
sqlparser = { path = "crates/sqlparser" }
logging = { path = "crates/logging"}
test_utils = { path = "crates/test_utils" }
dag = { path = "crates/dag"}
tokio-postgres = { version = "0.7", features = ["runtime"] }
shared_clients = { path = "crates/shared_clients" }
catalog = { path = "crates/catalog" }
executor = { path = "crates/executor" }
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread"] }
