[workspace]
resolver = "2"
members = [
    "dpf_core/cli",
    "dpf_core/ff_core",
    "dpf_core/common",
    "dpf_core/sqlparser",
    "dpf_core/logging",
    "dpf_core/test_utils",
    "dpf_core/executor",
    "dpf_core/catalog",
    "dpf_core/dag",
    "dpf_core/shared_clients",
    "dpf_core/components",
    "dpf_core/components/connector_versioning",
    "dpf_core/components/connector_versioning_derive",
    "foundry_web",
    "dpf_python",
    "dpf_core/python_parser"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Common deps shared across dpf_core
clap = { version = "4", features = ["derive"] }
petgraph = "0.6"
tracing = "0.1.41"
minijinja = "2.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
once_cell = "1"
tempfile = "3"
thiserror = "2"
regex = "1.10"
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["runtime"] }

common = { path = "dpf_core/common", default-features = false }
ff_core = { path = "dpf_core/ff_core" }
sqlparser = { path = "dpf_core/sqlparser" }
logging = { path = "dpf_core/logging"}
test_utils = { path = "dpf_core/test_utils" }
dag = { path = "dpf_core/dag"}
shared_clients = { path = "dpf_core/shared_clients" }
catalog = { path = "dpf_core/catalog" }
executor = { path = "dpf_core/executor" }
components = { path = "dpf_core/components", default-features = false}
connector_versioning = { path = "dpf_core/components/connector_versioning"}
connector_versioning_derive = {path = "dpf_core/components/connector_versioning_derive"}
python_parser = { path = "dpf_core/python_parser"}
foundry_web = { path = "foundry_web"}


[workspace.lints.clippy]
large_enum_variant = "allow"

[alias]
test-all = "test --workspace --all-targets --features sqlparser/kafka"
