[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "dpf_python"
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X"
]

[tool.maturin]
python-source = "python"
module-name = "dpf_python.dpf_python"
