[package]
name = "foundry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true}
minijinja = {version = "2.10.2"}
ff_core = { workspace = true }
common = { workspace = true }
shared_clients = { workspace = true }
tempfile = "3.20.0"
tracing-subscriber = {  version = "0.3.19", features = ["env-filter", "std", "local-time"] }
time = {version = "0.3.41", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde_json = { workspace = true }
log = "0.4.27"

[dev-dependencies]
serde_yaml = { workspace = true }
test_utils = { workspace = true }
