[package]
name = "components"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { workspace = true, features = ["kafka-types"]}
catalog = { workspace = true, optional = true}
thiserror = { workspace = true }
serde = { workspace = true, optional = true}
serde_json = { workspace = true, optional = true}

[dev-dependencies]
test_utils = { workspace = true }
tempfile = "3.20.0"
ff_core = { workspace = true }

[features]
kafka = ["dep:catalog", "dep:serde_json"]
kafka-types = ["dep:serde"]

serde = ["dep:serde"]

[package.metadata.docs.rs]
# show kafka APIs in docs.rs builds (optional)
features = ["kafka-types", "serde"]
rustdoc-args = ["--cfg", "docsrs"]

