[package]
name = "dag"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
petgraph = "0.8.2"
minijinja = "2.11.0"
common = { workspace = true}
catalog = { workspace = true}
sqlparser = { workspace = true }
log = "0.4.27"
env_logger = "0.11.8"
thiserror = { workspace = true }
components = { workspace = true, features = ["kafka"]}

[dev-dependencies]
test_utils = { workspace = true }
tempfile = "3.20.0"
ff_core = { workspace = true }
