[package]
name = "database_adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logging = { workspace = true }
tracing = "0.1.41"
tokio-postgres = { workspace = true }
common = { workspace = true }
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt"] }
