[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = {workspace = true}
serde_json = { workspace = true }
logging = { workspace = true }
postgres = "0.19"
log = "0.4.27"
tracing = "0.1.41"
registry = { workspace = true }
sqlparser = { workspace = true }
dag = { workspace = true }
common = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = { workspace = true }
once_cell = { workspace = true }
test_utils = { workspace = true }
