[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
test_utils = { workspace = true }
wiremock = { version = "0.6.4" }
testcontainers = { version = "0.24.0" }
tokio-postgres = { workspace = true }
anyhow = { version = "1.0.98" }


[dependencies]
serde_json = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { workspace = true }
serde_yaml = "0.9.34+deprecated"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
parking_lot = "0.12.4"
sqlparser = { workspace = true, features = ["json_example"]}
reqwest = { version = "0.12.22", features = ["json"] }
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread"] }
common = { workspace = true }
dag = { workspace = true }
shared_clients = { workspace = true }
tracing-subscriber = "0.3.19"


