[package]
name = "ff_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde_yaml = { workspace = true}
serde = {workspace = true}
minijinja = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.8.2"
common = { workspace = true}
walkdir = "2.5.0"
sqlparser = { workspace = true}
dag = { workspace = true}
catalog = { workspace = true }
logging = { workspace = true }
database_adapters = { workspace = true }
regex = "1.11.1"

[dev-dependencies]
tempfile = { workspace = true }
once_cell = { workspace = true }
test_utils = { workspace = true }
