[package]
name = "ff_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = {workspace = true}
serde_json = { workspace = true }
common = { workspace = true}
walkdir = "2.5.0"
sqlparser = { workspace = true}
dag = { workspace = true}
catalog = { workspace = true }
logging = { workspace = true }
executor = {workspace = true}
log = "0.4.27"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { workspace = true }
test_utils = { workspace = true }
