[package]
name = "registry"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
once_cell = { workspace = true }
test_utils = { workspace = true }
[dependencies]
thiserror = "2.0.12"
serde_json = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { workspace = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
parking_lot = "0.12.4"