[package]
name = "shared_clients"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread"] }
tokio-postgres = {workspace = true}
serde = { workspace = true }
reqwest = {  version = "0.12.23",  features = ["json"] }
serde_json = {workspace = true}
common = { workspace = true }