[package]
name = "catalog"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
matches = "0.1"
test_utils = { workspace = true }

[dependencies]
serde_json = { workspace = true }
serde_yaml = "0.9.34+deprecated"
serde = { workspace = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
parking_lot = "0.12.4"
sqlparser = { workspace = true, features = ["json_example", "kafka"]}
common = { workspace = true }
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }

[lints]
workspace = true
