[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9.34+deprecated"
log = "0.4.27"
walkdir = "2.5.0"
minijinja = "2.12.0"
thiserror = { workspace = true }
[dev-dependencies]
test_utils = { workspace = true}

[features]
kafka-types = []
