[package]
name = "executor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
test_utils = { workspace = true }
tempfile = { workspace = true }
wiremock = { version = "0.6.4" }
testcontainers = { version = "0.24.0" }
tokio-postgres = { workspace = true }
anyhow = { version = "1.0.98" }


[dependencies]
serde_json = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { workspace = true }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlparser = { workspace = true, features = ["json_example"]}
tokio = {version = "1.45.1", features = ["macros", "rt-multi-thread"] }
common = { workspace = true }
dag = { workspace = true }
shared_clients = { workspace = true }
thiserror = { workspace = true }
log = "0.4.27"
