[package]
name = "python_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_ast", rev = "3b23d3c"}
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", package = "ruff_python_parser", rev = "3b23d3c"}
ruff_text_size = { git = "https://github.com/astral-sh/ruff", package = "ruff_text_size", rev = "3b23d3c"}

[lints]
workspace = true
