[package]
name = "python_parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "v0.4.10" }
common = { workspace = true }

[lints]
workspace = true
