[package]
name = "connector_versioning_derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro derive for connectors"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
connector_versioning = { workspace = true }

