[project]
name = "dvdrental-foundry-python"
version = "0.1.0"
description = "Python ETL workspace for the FlowFoundry dvdrental example"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
managed = true
cache-dir = ".uv-cache"

[tool.uv.sources]
bronze_film_enricher = { workspace = true }
dpf_python = { path = "../../../dpf_python" }

[tool.dpf]
nodes = [
    "bronze_film_enricher"
]
nodes_dir = "jobs"

[tool.uv.workspace]
# Each ETL lives under foundry_python/jobs/<etl_name> with its own pyproject.toml
members = ["jobs/*"]
